--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -125,6 +125,7 @@
         
         @include respond(phone){
             top: 60%;
+            font-size: 1.4rem;
         }
     }
     
